post ページのレイアウト更新

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,11 @@
+html {
+  --base-font-size: 19px;
+}
+
 body {
   --space: 3.5rem;
-  
+  --border-color: rgba(0, 0, 0, .1);
+  --title-color: #111;
 }
 
 $pc-content-width: 750px;
