--- a/src/assets/scss/_code.scss
+++ b/src/assets/scss/_code.scss
@@ -5,171 +5,171 @@ https: //prismjs.com/download.html#themes=prism&languages=markup+css+clike+javas
  * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
-.v-application {
-  pre {
-    padding: calc(var(--space) / 4);
-    font-size: .95em;
-    background-color: var(--bg-code);
-    margin-bottom: 2em;    
-    border-radius: var(--radius);
-    box-shadow: none;
-
-    code {
-      display: inline-block;
-      background-color: var(--bg-code);
-      border: 1px solid var(--border-color);
-      font-size: .95em;
-      padding: .5em .7em;
-      font-weight: 500;
-      border: none;
-      box-shadow: none;
-    }
+pre {
+  padding: calc(var(--space) / 4);
+  font-size: .95rem;  
+  background-color: var(--bg-code);
+  margin-bottom: 2em;
+  border-radius: var(--radius);
+  box-shadow: none;
+  @include sp() {
+    font-size: .8rem;
   }
-
   code {
-    // vuetifyを上書き
-    background-color: #f5f5f5;
+    display: inline-block;
+    background-color: var(--bg-code);
+    border: 1px solid var(--border-color);   
+    padding: .5em .7em;
     font-weight: 500;
-    color: #f78502;
+    border: none;
     box-shadow: none;
   }
+}
+
+code {
+  // vuetifyを上書き
+  background-color: #f5f5f5;
+  font-weight: 500;
+  color: #f78502;  
+  padding: 0.2em 0.35em;
+  margin: 0 0.25em;
+}
 
 
+
+code[class*="language-"],
+pre[class*="language-"] {
+  color: black;
+  background: none;
+  text-shadow: 0 1px white;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+@media print {
 
   code[class*="language-"],
   pre[class*="language-"] {
-    color: black;
-    background: none;
-    text-shadow: 0 1px white;
-    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-    text-align: left;
-    white-space: pre;
-    word-spacing: normal;
-    word-break: normal;
-    word-wrap: normal;
-    line-height: 1.5;
-
-    -moz-tab-size: 4;
-    -o-tab-size: 4;
-    tab-size: 4;
-
-    -webkit-hyphens: none;
-    -moz-hyphens: none;
-    -ms-hyphens: none;
-    hyphens: none;
-  }
-
-  pre[class*="language-"]::-moz-selection,
-  pre[class*="language-"] ::-moz-selection,
-  code[class*="language-"]::-moz-selection,
-  code[class*="language-"] ::-moz-selection {
     text-shadow: none;
-    background: #b3d4fc;
   }
+}
 
-  pre[class*="language-"]::selection,
-  pre[class*="language-"] ::selection,
-  code[class*="language-"]::selection,
-  code[class*="language-"] ::selection {
-    text-shadow: none;
-    background: #b3d4fc;
-  }
+/* Code blocks */
+pre[class*="language-"] {
+  overflow: auto;
+}
 
-  @media print {
+:not(pre)>code[class*="language-"],
+pre[class*="language-"] {
+  background: #f5f2f0;
+}
 
-    code[class*="language-"],
-    pre[class*="language-"] {
-      text-shadow: none;
-    }
-  }
+/* Inline code */
+:not(pre)>code[class*="language-"] {
+  padding: .1em;
+  border-radius: .3em;
+  white-space: normal;
+}
 
-  /* Code blocks */
-  pre[class*="language-"] {
-    overflow: auto;
-  }
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: slategray;
+}
 
-  :not(pre)>code[class*="language-"],
-  pre[class*="language-"] {
-    background: #f5f2f0;
-  }
+.token.punctuation {
+  color: #999;
+}
 
-  /* Inline code */
-  :not(pre)>code[class*="language-"] {
-    padding: .1em;
-    border-radius: .3em;
-    white-space: normal;
-  }
+.token.namespace {
+  opacity: .7;
+}
 
-  .token.comment,
-  .token.prolog,
-  .token.doctype,
-  .token.cdata {
-    color: slategray;
-  }
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #905;
+}
 
-  .token.punctuation {
-    color: #999;
-  }
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #690;
+}
 
-  .token.namespace {
-    opacity: .7;
-  }
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #9a6e3a;
+  background: hsla(0, 0%, 100%, .5);
+}
 
-  .token.property,
-  .token.tag,
-  .token.boolean,
-  .token.number,
-  .token.constant,
-  .token.symbol,
-  .token.deleted {
-    color: #905;
-  }
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #07a;
+}
 
-  .token.selector,
-  .token.attr-name,
-  .token.string,
-  .token.char,
-  .token.builtin,
-  .token.inserted {
-    color: #690;
-  }
+.token.function,
+.token.class-name {
+  color: #DD4A68;
+}
 
-  .token.operator,
-  .token.entity,
-  .token.url,
-  .language-css .token.string,
-  .style .token.string {
-    color: #9a6e3a;
-    background: hsla(0, 0%, 100%, .5);
-  }
+.token.regex,
+.token.important,
+.token.variable {
+  color: #e90;
+}
 
-  .token.atrule,
-  .token.attr-value,
-  .token.keyword {
-    color: #07a;
-  }
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
 
-  .token.function,
-  .token.class-name {
-    color: #DD4A68;
-  }
+.token.italic {
+  font-style: italic;
+}
 
-  .token.regex,
-  .token.important,
-  .token.variable {
-    color: #e90;
-  }
-
-  .token.important,
-  .token.bold {
-    font-weight: bold;
-  }
-
-  .token.italic {
-    font-style: italic;
-  }
-
-  .token.entity {
-    cursor: help;
-  }
+.token.entity {
+  cursor: help;
 }
